--- a/Proyecto_clase/Proyecto_final.ipynb
+++ b/Proyecto_clase/Proyecto_final.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YUBowjV51zJ_6pVn13tuO3cLYLXtas1u",
-      "authorship_tag": "ABX9TyM4+1oU7HCQRRtgXhBBvEMQ",
+      "authorship_tag": "ABX9TyOCc3ng+cDxXS9pzefcxflY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -666,7 +666,6 @@
       "source": [
         "for col in precio_acciones.columns:\n",
         "    if precio_acciones[col].dtype == 'object':\n",
-        "        # Replace comma with dot and convert to numeric\n",
         "        precio_acciones[col] = precio_acciones[col].str.replace('.', '', regex=False)\n",
         "        precio_acciones[col] = precio_acciones[col].str.replace(',', '.', regex=False).astype(float)\n",
         "\n",
@@ -715,15 +714,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Melt the DataFrame to long format for easier processing\n",
         "precio_acciones_fragmentada = precio_acciones.melt(\n",
         "    id_vars='Fecha', var_name='Stock', value_name='Price'\n",
         ")\n",
         "\n",
-        "# Sort by date and stock\n",
         "precio_acciones_fragmentada = precio_acciones_fragmentada.sort_values(by=['Stock', 'Fecha'])\n",
         "\n",
-        "# Calculate daily percentage change for each stock\n",
         "precio_acciones_fragmentada['Daily_Change'] = precio_acciones_fragmentada.groupby('Stock')['Price'].pct_change()\n",
         "\n",
         "display(precio_acciones_fragmentada.head())"
@@ -1418,7 +1414,7 @@
       "cell_type": "code",
       "source": [
         "fig, axes = plt.subplots(n_rows, n_cols, figsize=(16, n_rows * 4))\n",
-        "axes = axes.flatten() # Flatten the 2D array of axes for easy iteration\n",
+        "axes = axes.flatten()\n",
         "\n",
         "for i, stock in enumerate(stocks):\n",
         "    stock_data = precio_acciones_cleaned[precio_acciones_cleaned['Stock'] == stock]\n",
@@ -1427,10 +1423,6 @@
         "    axes[i].set_xlabel(\"Fecha\")\n",
         "    axes[i].set_ylabel(\"Daily Change\")\n",
         "    axes[i].grid(True)\n",
-        "\n",
-        "# Hide any unused subplots\n",
-        "for j in range(i + 1, len(axes)):\n",
-        "    fig.delaxes(axes[j])\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.show()"
@@ -1461,7 +1453,7 @@
       "cell_type": "code",
       "source": [
         "fig, axes = plt.subplots(n_rows, n_cols, figsize=(16, n_rows * 4))\n",
-        "axes = axes.flatten() # Flatten the 2D array of axes for easy iteration\n",
+        "axes = axes.flatten()\n",
         "\n",
         "for i, stock in enumerate(stocks):\n",
         "    stock_data = precio_acciones_cleaned[precio_acciones_cleaned['Stock'] == stock]\n",
@@ -1504,9 +1496,9 @@
         "\n",
         "for i, stock in enumerate(stocks):\n",
         "    stock_data = precio_acciones_cleaned[precio_acciones_cleaned['Stock'] == stock]\n",
-        "    sns.violinplot(data=stock_data, y=\"Daily_Change\", ax=axes[i]) # Use ax parameter to specify the subplot\n",
+        "    sns.violinplot(data=stock_data, y=\"Daily_Change\", ax=axes[i])\n",
         "    axes[i].set_title(stock)\n",
-        "    axes[i].set_xlabel(\"Fecha\") # Note: Violin plot doesn't have x-axis as date in this case\n",
+        "    axes[i].set_xlabel(\"Fecha\")\n",
         "    axes[i].set_ylabel(\"Daily Change\")\n",
         "    axes[i].grid(axis = \"y\", linestyle =\"--\", alpha = 0.7)\n",
         "\n",
@@ -1535,33 +1527,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GzM1LNgHQr6u"
-      },
-      "source": [
-        "fig, axes = plt.subplots(n_rows, n_cols, figsize=(16, n_rows * 4))\n",
-        "axes = axes.flatten() # Flatten the 2D array of axes for easy iteration\n",
-        "\n",
-        "for i, stock in enumerate(stocks):\n",
-        "    stock_data = precio_acciones_cleaned[precio_acciones_cleaned['Stock'] == stock]\n",
-        "    axes[i].plot(stock_data['Fecha'], stock_data['Daily_Change'])\n",
-        "    axes[i].set_title(stock)\n",
-        "    axes[i].set_xlabel(\"Fecha\")\n",
-        "    axes[i].set_ylabel(\"Daily Change\")\n",
-        "    axes[i].grid(True)\n",
-        "\n",
-        "# Hide any unused subplots\n",
-        "for j in range(i + 1, len(axes)):\n",
-        "    fig.delaxes(axes[j])\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
